fixed speed controls z-index

--- a/public/css/linkedin.css
+++ b/public/css/linkedin.css
@@ -83,6 +83,7 @@ ul {
   cursor: pointer;
   display: none;
   height: 80px;
+  left: 15px;
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -128,6 +129,7 @@ select {
   text-align: center;
   top: 0;
   width: 100%;
+  z-index: 999;
 }
 #loading {
   background-color: #fff;
@@ -195,9 +197,16 @@ select {
   color: #39c;
   float: left;
   list-style: none;
-  padding: 0 0 0 10px;
-  margin: 0;
+  padding: 1px 5px 5px;
+  position: relative;
+  margin: -1px 5px 5px;
   text-decoration: none;
+  z-index: 900;
+}
+#speed:hover {
+  background-color: #222;
+  border: 1px solid #000;
+  padding: 0 4px 4px;
 }
 #speed li {
   cursor: pointer;
